[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scripts/Rhino.gd" type="Script" id=1]
[ext_resource path="res://Enemies/Enemies/Rhino.png" type="Texture" id=2]
[ext_resource path="res://ProgressBar.tscn" type="PackedScene" id=3]
[ext_resource path="res://RhinoHitDust.tres" type="Material" id=4]
[ext_resource path="res://Particles/Z.png" type="Texture" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 9.0
height = 12.0

[sub_resource type="Animation" id=4]
resource_name = "Run"
length = 0.75
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Shape:shape:radius")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 9.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Shape:shape:height")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 12.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Shape:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -6, 3.5 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ZZZ:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../ProgressBar:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -23, -14 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("ZZZ:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
resource_name = "Sleep"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:friction")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.99, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:sleeping")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 2, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/4/type = "bezier"
tracks/4/path = NodePath(".:scale:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray(  ),
"times": PoolRealArray(  )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath(".:scale:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1.03, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2.5, 4 )
}
tracks/6/type = "value"
tracks/6/path = NodePath("../ProgressBar:rect_position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -24, -7 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("../Shape:shape:radius")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 6.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("../Shape:shape:height")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 18.0 ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("../Shape:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -8, 8 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("ZZZ:emitting")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("ZZZ:visible")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0, 0.153846, 0.715385, 0.946154 )
colors = PoolColorArray( 0.847059, 0.847059, 0.847059, 0.207843, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0.470588 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )

[sub_resource type="Curve" id=7]
_data = [ Vector2( 0.00510204, 0.52454 ), 0.0, 0.0, 0, 0, Vector2( 0.467687, 0.978528 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.51227 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=8]
curve = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=9]
flag_disable_z = true
gravity = Vector3( 0.5, -3, 0 )
orbit_velocity = -0.05
orbit_velocity_random = 0.0
damping = 2.35
scale = 0.5
scale_curve = SubResource( 8 )
color_ramp = SubResource( 6 )

[sub_resource type="Animation" id=10]
resource_name = "Flash"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Color( 4, 2, 2, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Rhino" type="KinematicBody2D"]
position = Vector2( 6, -3 )
collision_layer = 7
collision_mask = 7
collision/safe_margin = 0.01
script = ExtResource( 1 )

[node name="Shape" type="CollisionShape2D" parent="."]
position = Vector2( -6, 3.5 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Rhino" type="Sprite" parent="."]
position = Vector2( -6, 14 )
z_index = 1
texture = ExtResource( 2 )
offset = Vector2( 0, -12 )
hframes = 5
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Rhino"]
autoplay = "Run"
anims/Run = SubResource( 4 )
anims/Sleep = SubResource( 3 )

[node name="Hit" type="Particles2D" parent="Rhino"]
position = Vector2( 14, -2 )
emitting = false
amount = 50
lifetime = 0.3
one_shot = true
explosiveness = 1.0
local_coords = false
process_material = ExtResource( 4 )

[node name="ZZZ" type="Particles2D" parent="Rhino"]
visible = false
position = Vector2( 14, -12 )
emitting = false
amount = 3
lifetime = 8.0
draw_order = 1
process_material = SubResource( 9 )
texture = ExtResource( 5 )

[node name="Flash" type="AnimationPlayer" parent="Rhino"]
anims/Flash = SubResource( 10 )

[node name="Area2D" type="Area2D" parent="Rhino"]
position = Vector2( -5, 1.99687 )
scale = Vector2( 1, 1.006 )
collision_layer = 0
collision_mask = 6

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Rhino/Area2D"]
position = Vector2( -1, -11.9253 )
polygon = PoolVector2Array( 9, -9, 13, -13, 18, -12, 24, -6, 24, 2, 21, 5, 12, 4 )

[node name="ProgressBar" parent="." instance=ExtResource( 3 )]
margin_top = -14.0
margin_bottom = -10.0

[connection signal="area_entered" from="Rhino/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Rhino/Area2D" to="." method="_on_Area2D_body_entered"]
